lost username in database.yml

--- a/config/database.yml
+++ b/config/database.yml
@@ -1,4 +1,4 @@
-# PostgreSQL. Versions 8.2 and up are supported.
+ PostgreSQL. Versions 8.2 and up are supported.
 #
 # Install the pg driver:
 #   gem install pg
@@ -53,5 +53,4 @@ production:
   encoding: unicode
   database: sff_production
   pool: 5
-  username: 
   password:
